// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pb;
option go_package = ".;pb";




import "common.proto";


// 行情K线类型
enum KType {
    KType_NULL = 0;

	// 实时行情
	Real = 1;	// 实时（包含当前这一分钟的分时行情和买卖5档委托，随行情源每隔n秒同步一次）

	// 历史行情
	Min   = 2;	// 分时：任何时间（时间格式：时间戳，精确到秒
	MinToday= 3;// 分时：当天的（时间格式：HHMMSS
	Min5  = 4;	// 5分钟（时间格式：时间戳，精确到秒
	Min15 = 5;	// 15分（时间格式：时间戳，精确到秒
	Min30 = 6;	// 30分（时间格式：时间戳，精确到秒
	Min60 = 7;	// 60分（时间格式：时间戳，精确到秒

	Day  = 10;  // 日K（时间格式：YYYYMMDD
	Day7 = 11;  // 周K
}

// 行情K线波形
enum KStyle {
    Random = 0;	// 随机行情
	Wave = 1;	// 震荡行情
	Up = 2;		// 单边向上行情
	Down = 3;	// 单边向下行情
}

// 查询股票行情
message CmdQuoteQuery {
	KType ktype = 1;   	// K线类型（目前只有分时和日K）
	uint32 code = 2;    // 股票代码（0表示忽略和随机）
	int64 from = 3;    	// 开始时间戳（不能为0，查询日K行情的格式为：YYYYMMDD；查询分时行情的格式为：HHMMSS）
    int32 total = 4;   	// K线条数（0表示忽略该参数；如果total和to都不为0，则优先使用条数作为查询条件；一次性查询最大条数为2000条）
	int64 to = 5;      	// 结束时间戳（0表示忽略该参数；格式同from）
	KStyle kstyle = 6;	// 行情样式（如：单边向下、震荡）
}
message QuoteItem {
	uint32 code = 1;        // 股票代码
	KType ktype = 2;     	// K线类型
	int64 timestamp = 3;    // 时间戳
	
	double price = 4;       // 当前价
	uint64 volume = 5;      // 成交量
	double amount = 6;      // 成交额
	uint64 count = 7;		// 成交笔数
	double open = 8;        // 开盘价
	double close = 9;       // 昨收价
	double high = 10;       // 最高价
	double low = 11;        // 最低价

	repeated double ask5Price  = 12;// 申买五档价
	repeated uint64 ask5Volume = 13;// 申买五档量
	repeated double bid5Price  = 14;// 申卖五档价
	repeated uint64 bid5Volume = 15;// 申卖五档量
}
message Quotes {
	repeated QuoteItem items = 1;
}

// 订阅行情 or 取消订阅行情
message QuoteSubscribeItem {
	string code = 1;    // 股票代码
	bool flag = 2;      // 订阅标记（true：订阅，false：取消）
}
message CmdQuoteSubscribe {
	repeated QuoteSubscribeItem items = 1;
}



// 查询期货行情
message CmdQuoteQueryFuture {
	KType ktype = 1;   	// K线类型
	uint32 code = 2;    // 合约代码（2000000表示忽略和随机）
	int64 from = 3;    	// 开始时间戳（不能为0，查询日K行情的格式为：YYYYMMDD，查询分时行情的格式为：时间戳，精确到秒）
    int32 total = 4;   	// K线条数（0表示忽略该参数；如果total和to都不为0，则优先使用条数作为查询条件；一次性查询最大条数为2000条）
	int64 to = 5;      	// 结束时间戳（0表示忽略该参数；格式同from）
}

message QuoteItemFuture {
	uint32 code = 1;        // 合约代码
	KType ktype = 2;     	// K线类型
	int64 timestamp = 3;    // 时间戳
	
	double open = 4;        // 开盘价
	double close = 5;       // 昨收价
	double high = 6;       	// 最高价
	double low = 7;        	// 最低价

	uint64 volume = 8;      // 成交量
	uint64 vol_volume = 9;  // VOL.VOLUME
	uint64 ccl_hold = 12;	// CCL.持仓量
}
message QuotesFuture {
	repeated QuoteItemFuture items = 1;
}






// GRPC

service QuotesService {
  rpc QuotesQuery (CmdQuoteQuery) returns (Quotes) {}
  rpc QuotesSubscribe (CmdQuoteSubscribe) returns (ErrorInfo) {}
}

service QuotesFutureService {
  rpc QuotesQuery (CmdQuoteQueryFuture) returns (QuotesFuture) {}
}